--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,3 @@
 # ------ Import other configuration ------
-spring.config.import=application-h2.properties
+spring.config.import=application-h2.properties , application-ehcache.properties
 # logging.level.org.springframework.cache=TRACE
-
-spring.cache.type=jcache
-
-spring.cache.jcache.config=classpath:ehcache.xml
